fix: align landing page

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -286,7 +286,7 @@ header {
 }
 .how-it-works {
   width: 1800px;
-  height: 969px;
+  height: 975px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
